# torch-ppr

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: tests.yml
docs/source/: conf.py  details.rst  index.rst  installation.rst  usage.rst
src/torch_ppr/: __init__.py  api.py  utils.py  version.py
tests/: __init__.py  test_api.py  test_utils.py  test_version.py
